--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculator_web",
+  "name": "832102113_calculator_fontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
